--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>dom4j</artifactId>
       <version>2.1.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.esotericsoftware.yamlbeans</groupId>
+      <artifactId>yamlbeans</artifactId>
+      <version>1.17</version>
+    </dependency>
   </dependencies>
 
   <build>
